[package]
name = "cards-rs-humanity-actix1_0"
version = "0.1.0"
authors = ["FireFlyForLife <maiko.s.99@gmail.com>"]
edition = "2018"

[dependencies]
actix = "0.8.2"
actix-web = "1.0.3"
actix-web-actors = "1.0.0"
actix-files = "0.1.3"
actix-session = "0.1.1"

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

log = "0.4.6"
env_logger = "0.6.2"
futures = "0.1.25"
bytes = "0.4"
json = "0.11.14"
uuid = { version = "0.7.4", features = ["serde", "v4"] }
rand = "0.7.0"
sha2 = "0.8.0"
generic-array = "0.12.3"
